welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:7: error: illegal start of simple expression
		gauche(}
                       ^MethodsDogHouse:10: error: expected class or object definition
dogHouse()
^MethodsDogHouse:15: error: expected start of definition
	override def run() {
                 ^MethodsDogHouse:46: error: Unmatched closing brace '}' ignored here
}
^